fixing several bugs from Copilot