@@ -11,7 +11,10 @@ import org.springframework.transaction.annotation.Transactional;
 import java.util.List;
 import java.util.Optional;
 
-import static org.junit.jupiter.api.Assertions.*;
+import static org.junit.jupiter.api.Assertions.assertEquals;
+import static org.junit.jupiter.api.Assertions.assertFalse;
+import static org.junit.jupiter.api.Assertions.assertNotNull;
+import static org.junit.jupiter.api.Assertions.assertTrue;
 
 @SpringBootTest
 @ActiveProfiles("test")
@@ -61,7 +64,7 @@ class RepositoryServiceTest {
 
         List<ResticRepository> enabled = repositoryService.findAllEnabled();
         assertEquals(1, enabled.size());
-        assertEquals("Enabled Repo", enabled.get(0).getName());
+        assertEquals("Enabled Repo", enabled.getFirst().getName());
     }
 
     @Test
